--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:500|Source+Code+Pro" rel="stylesheet">
     <script async defer src="https://buttons.github.io/buttons.js"></script>
   </head>
   <body>
@@ -13,19 +14,65 @@
       <div class="blurredbg">
         <nav>
           <a href="#">Bio</a>
-          <a href="#">Music</a>
           <a href="#">Videos</a>
+          <a href="#">Music</a>
           <a href="#">Shop</a>
         </nav>
       </div>
     </section>
     <section id="bio">
-      <p>
-        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
-      </p>
-      <div class="logoCentered">
-        <img src="/img/logo.jpg" alt="the bio">
+      <div class="container">
+        <p>
+          At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
+        </p>
+        <div class="logoCentered">
+          <img src="/img/logo.jpg" alt="the bio">
+        </div>
       </div>
+    </section>
+    <section id="media">
+      <div class="container">
+        <div class="title">Latest Videos</div>
+        <div class="videos">
+          <div class="video">
+            <iframe width="100%" height="315" src="https://www.youtube.com/embed/60DDxV_LE98" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          </div>
+          <div class="video">
+            <iframe width="100%" height="315" src="https://www.youtube.com/embed/5Wmsz8_bj9k" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          </div>
+          <div class="video">
+            <iframe width="100%" height="315" src="https://www.youtube.com/embed/hlJ6qI-CKas" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          </div>
+          <div class="video">
+            <iframe width="100%" height="315" src="https://www.youtube.com/embed/xQP8imBcc7A" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="music">
+      <div class="container">
+        <div class="info">
+          <div class="title">
+            Swimming Deep
+          </div>
+          <ul class="singles">
+            <li>Swimming Deep</li>
+            <li>Money that I spent</li>
+            <li>Far Away</li>
+            <li>Sea of Hennessy</li>
+          </ul>
+          <ul class="logos">
+            <li><img src="/img/spotify.png" alt=""></li>
+            <li><img src="/img/apple.png" alt=""></li>
+            <li><img src="/img/youtube.png" alt=""></li>
+            <li><img src="" alt=""></li>
+          </ul>
+        </div>
+        <div class="albumCover">
+          <img src="/img/swimming.jpg" alt="swimming deep">
+        </div>
+      </div>
+
     </section>
     <script src="/js/components/vendor.js"></script>
     <script src="/js/components/firstComp.js"></script>
