added albums and footer

--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,9 @@
     <section id="topSection">
       <div class="blurredbg">
         <nav>
-          <a href="#">Bio</a>
-          <a href="#">Videos</a>
-          <a href="#">Music</a>
-          <a href="#">Shop</a>
+          <a href="#bio">Bio</a>
+          <a href="#media">Videos</a>
+          <a href="#music">Music</a>
         </nav>
       </div>
     </section>
@@ -49,7 +48,7 @@
         </div>
       </div>
     </section>
-    <section id="music">
+    <section class="music" id="music">
       <div class="container">
         <div class="info">
           <div class="title">
@@ -62,10 +61,9 @@
             <li>Sea of Hennessy</li>
           </ul>
           <ul class="logos">
-            <li><img src="/img/spotify.png" alt=""></li>
-            <li><img src="/img/apple.png" alt=""></li>
-            <li><img src="/img/youtube.png" alt=""></li>
-            <li><img src="" alt=""></li>
+            <li><a href='https://open.spotify.com/artist/0cnn8gghPntBahfdQOZkWU' target="_blank"><img src="/img/spotify.png"></a></li>
+            <li><a href='https://itunes.apple.com/us/album/swimming-deep/1269331642' target="_blank"><img src="/img/apple.png" alt=""></a></li>
+            <li><a href='https://www.youtube.com/channel/UC5kVmtcZ3WaPYAiBm_LaGag/videos' target="_blank"><img src="/img/youtube.png" alt=""></a></li>
           </ul>
         </div>
         <div class="albumCover">
@@ -74,6 +72,37 @@
       </div>
 
     </section>
+    <section class="music" id="musicTwo">
+      <div class="container">
+        <div class="info">
+          <div class="title">
+            No Shortcuts
+          </div>
+          <ul class="singles">
+            <li>Untrappable</li>
+            <li>Recipe</li>
+            <li>Crazy</li>
+            <li>Good God</li>
+          </ul>
+          <ul class="logos">
+            <li><a href='https://open.spotify.com/artist/0cnn8gghPntBahfdQOZkWU' target="_blank"><img src="/img/spotify.png" alt=""></a></li>
+            <li><a href='https://itunes.apple.com/us/album/no-shortcuts/1148338620' target="_blank"><img src="/img/apple.png" alt=""></a></li>
+            <li><a href='https://www.youtube.com/channel/UC5kVmtcZ3WaPYAiBm_LaGag/videos' target="_blank"><img src="/img/youtube.png" alt=""></a></li>
+          </ul>
+        </div>
+        <div class="albumCover">
+          <img src="/img/media.jpg" alt="no shortcuts">
+        </div>
+      </div>
+    </section>
+    <section id="picture">
+      <footer>
+        <div class="foot">
+          <p>Villain Music Company© 2018</p>
+        </div>
+      </footer>
+    </section>
+
     <script src="/js/components/vendor.js"></script>
     <script src="/js/components/firstComp.js"></script>
   </body>
